<resources>
    <string name="app_name">Covid-Monitor</string>
    <string name="home">Inicio</string>
    <string name="info">Información</string>
    <string name="datos">Evolución</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="cédula">Cédula</string>
    <string name="edad">Edad</string>
    <string name="alergias">Alergias</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="agregar_paciente">Agregar paciente</string>
    <string name="Cancelar">Cancelar</string>
    <string name="agregar">Agregar</string>
    <string name="emptyfields">Los campos no pueden estar vacios</string>
    <string name="addPacient">Paciente Creado Correctamente</string>
    <string name="IDdispositivo">ID del dispositivo</string>
    <string name="Peso">Peso</string>
    <string name="Estatura">Estatura</string>
    <string name="title_activity_add_pacient">AddPacientActivity</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="ciHint">20687321</string>
    <string name="lastNameHint">Perez</string>
    <string name="nameHint">Pedro</string>
    <string name="years">Años</string>
    <string name="centimeters">cm</string>
    <string name="kilograms">Kg</string>
    <string name="patoprev">Patologías Previas</string>
    <string name="gruposang">Grupo Sanguíneo</string>
    <string name="ninguna">Ninguna</string>
    <string name="grupo_san">Grupo Sanguíneo</string>
    <string name="ci_rv">Cédula: %s</string>
    <string name="ritmo_cardiaco">Ritmo Cardiaco</string>
    <string name="oxigenaci_n">Oxigenación</string>
    <string name="temperatura">Temperatura</string>
    <string name="evoluci_n">EVOLUCIÓN</string>
    <string name="ver_datos">Ver datos</string>
    <string name="nodata">NO HAY DATOS PARA ESTE USUARIO</string>
    <string name="monitorear_paciente">Monitorear Paciente</string>
    <string name="m_s_informacion">Más Informacion</string>
    <string name="advertencia">"¡Advertencia!"</string>
    <string name="exito">"¡Éxito!"</string>
    <string name="error">"¡Error!"</string>
    <string name="borrar">Borrar</string>
    <string name="alta">¿Desea dar de alta al paciente?</string>
    <string name="elim">El paciente se eliminó de la lista pero aún no se le ha dado de alta</string>
    <string name="yes">Sí</string>
    <string name="no">No</string>
    <string name="default_notification_channel_id">com.example.apptesis</string>
    <string name="monitorear_pacientes">Monitorear Pacientes</string>
    <string name="fa32d3">FA32D3</string>
    <string name="_12345678">12345678</string>
    <string name="el_paciente_no_est_conectado_al_sensor">El paciente no está conectado al sensor</string>
    <string name="hay_un_valor_fuera_de_los_rangos_normales">Hay un valor fuera de los rangos normales</string>
</resources>