<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.AddPacientActivity"
    android:orientation="vertical"
    android:background="@color/darkwhite">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
    <EditText
        android:hint="@string/nombre"
        android:id="@+id/etNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp" />

    <EditText
        android:hint="@string/apellido"
        android:id="@+id/etApellido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp" />

    <EditText
        android:id="@+id/etCI"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:inputType="number"
        android:hint="@string/cédula" />

    <EditText
        android:id="@+id/etID"
        android:hint="@string/IDdispositivo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal"
        android:textAlignment="center">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/edad"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/Peso"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/Estatura"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_weight="0.3">

            <NumberPicker
                android:id="@+id/npEdad"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="0dp"
                android:layout_weight="0.3" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:gravity="center_vertical"
                android:text="@string/years" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_weight="0.3">

            <NumberPicker
                android:id="@+id/npPeso"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="0dp"
                android:layout_weight="0.3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.3"
                android:gravity="center_vertical"
                android:text="@string/kilograms" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.3">

            <NumberPicker
                android:id="@+id/nbEstatura"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="0dp"
                android:layout_weight="0.3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="0dp"
                android:layout_weight="0.3"
                android:gravity="center_vertical"
                android:text="@string/centimeters" />
        </LinearLayout>


    </LinearLayout>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/grupo_san" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:textAlignment="center" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/patoprev" />

    <Spinner
        android:id="@+id/spinner3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:textAlignment="center" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/ninguna"
        android:id="@+id/tvPrevpato"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
          android:background="@drawable/btnstyle"
            android:id="@+id/btnCanPato"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Cancelar"
            android:layout_marginHorizontal="25dp"
            android:layout_weight="0.5"/>
        <Button
            android:textColor="@color/white"
            android:background="@drawable/btnstyle"
            android:id="@+id/btnAddPato"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:text="@string/agregar"
            android:layout_weight="0.5"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/alergias" />

    <Spinner
        android:id="@+id/spinner4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:textAlignment="center" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/ninguna"
        android:id="@+id/tvAlergias"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:textColor="@color/white"
            android:background="@drawable/btnstyle"
            android:id="@+id/btnCanAler"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Cancelar"

            android:layout_marginHorizontal="25dp"
            android:layout_weight="0.5"/>
        <Button
            android:textColor="@color/white"
            android:background="@drawable/btnstyle"
            android:id="@+id/btnAddAler"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:text="@string/agregar"
            android:layout_weight="0.5"/>
    </LinearLayout>

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/isloading1"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:visibility="gone"
                android:elevation="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/progress"
                tools:visibility="visible" />

    <Button
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:text="@string/agregar_paciente"
        android:id="@+id/btnAddPatient"
        android:background="@drawable/btnstyle">

    </Button>


        </LinearLayout>
    </ScrollView>
</LinearLayout>